# AI-Karen

./: .coverage  .coveragerc  .dockerignore  .env.backup.20250921_112934  .env.cuda  .env.example  .env.local  .env.multi-database.template  .env.optimized  .env.production  .env.production.plugins  .env.resource-limits  .env.resource-optimized  .env.template  .fuse_hidden0004752400000002  .gitignore  .kilocodemodes  .pre-commit-config.yaml  AGENTS.md  AGENT_FLOW.md  AG_UI_MEMORY_INTEGRATION_SUMMARY.md  AG_UI_MEMORY_INTERFACE_IMPLEMENTATION_SUMMARY.md  AI_KAREN_ARCHITECTURE_OVERVIEW.md  API_ENDPOINTS_FIXES.md  ASYNC_FACTORY_FIX_SUMMARY.md  AUDIT_INDEX.md  AUDIT_REPORT.md  AUTHENTICATION_AUDIT_REPORT.md  AUTHENTICATION_FIX.md  AUTHENTICATION_FIX_COMPLETE.md  AUTHENTICATION_SIMPLIFICATION.md  AUTH_CONSOLIDATION_SUMMARY.md  AUTH_FIX_SUMMARY.md  AUTH_MIGRATION_SUMMARY.md  AUTH_SERVICE_AUDIT.md  AUTH_TROUBLESHOOTING.md  Agent.md  BUG_FIXES_2026_04_09.md  CHANGELOG.md  CLEANUP_COMPLETE.md  (+332 more)
.gemini/: agent_medusa_overhaul_v1.md
FIX_PACK/: SECURITY_IMPLEMENTATION_SUMMARY.md  package-lock.json  package.json  vitest.config.ts
ai_karen_engine/: __init__.py
backups/: cleanup_auth_system.py  migrate_auth_system.py
config/: auth_config.json  config.json  config_ui.py  deployment.yml  llm_profiles.yml  memory.yml  model_orchestrator_rbac.yml  performance.yml  permissions.json  plugin_schema.json  production.json  providers.json  secure_auth_setup.md  security_config.yml  security_production.yml  services.yml  settings.json
config_assets/: README.md  config.bak  config.json  llm_profiles.json  llm_profiles.yml  model_runtime_discovery.json  optimization_config.json  permissions.json
contracts/: LICENSE_REQUEST_TEMPLATE.md  license.json
core/: __init__.py  echo_core.py  embedding_manager.py  intent_engine.py  kari_runner.py  mesh_planner.py  milvus_client.py  plugin_router.py  soft_reasoning_engine.py
data/: announcements.json  cortex_routing_gold_test_set.json  routing_evaluation_results.json  users.json
demo/: demo_hook_system.py
deployment/: README.md
desktop_ui/: README.md  package-lock.json  package.json  tauri.conf.json
development/: check_rate_limits.py  init_db_simple.py  simple_auth_bypass.py  simple_server.py  test_admin_permissions.py
docker/: Dockerfile.plugins  etcd.conf.yml  milvus.yaml  redis.conf
docs/: ADVANCED_CHAT_FEATURES_IMPLEMENTATION_SUMMARY.md  AGENTS.md  AI_KAREN_ARCHITECTURE_OVERVIEW.md  AUDIT_SUMMARY.txt  AUTHENTICATION_FIX_SUMMARY.md  AUTHENTICATION_SIMPLIFICATION.md  AUTHENTICATION_TIMEOUT_FIX.md  AUTH_CONSOLIDATION_SUMMARY.md  AUTH_FRONTEND_ERROR_HANDLING_FIX.md  AUTH_MIGRATION_SUMMARY.md  AUTH_ROUTES_MIDDLEWARE_UPDATE_SUMMARY.md  AUTH_SERVICE_USAGE_MAPPING.md  CHAT_API_HOOK_IMPLEMENTATION_SUMMARY.md  CHAT_ORCHESTRATOR_IMPLEMENTATION_SUMMARY.md  CHAT_REFACTORING_SUMMARY.md  CHAT_RUNTIME_FRONTEND_INTEGRATION.md  CLIPBOARD_API_FIX_SUMMARY.md  CONSOLE_ERROR_FIX_SUMMARY.md  CORTEX_PRODUCTION_READINESS.md  CORTEX_VALIDATION_SUMMARY.md  CRITICAL_FIXES_PROGRESS.md  CRITICAL_ISSUES.md  CUSTOM_SERVER_IMPLEMENTATION_SUMMARY.md  Content_Filtering_and_Guardrails.md  DATABASE_CONFIGURATION_README.md  DATABASE_SETUP.md  DATABASE_TABLE_AUDIT_SUMMARY.md  DEVELOPER_GUIDE.md  DEVELOPER_PLUGINS.md  DEV_SHEET.md  DOCUMENTATION_VALIDATION.md  ENHANCED_AUTH_MIGRATION_README.md  ERROR_RESPONSE_AI_INTEGRATION.md  EVIL_TWIN_SIGN_OFF_CHECKLIST.md  EXTENSION_ECOSYSTEM_LAUNCH.md  FINAL_TYPESCRIPT_CLEANUP_REPORT.md  FRONTEND_BACKEND_API_AUDIT_REPORT.md  FRONTEND_BACKEND_CONNECTION_FIX.md  KARI_UI_MODERNIZATION_PLAN.md  KIRE_KRO_SYSTEM.md  (+103 more)
examples/: advanced_formatting_example.py  advanced_training_config_demo.py  advanced_training_config_standalone_demo.py  ai_orchestrator_llm_integration_example.py  autonomous_learner_demo.py  basic_training_mode_demo.py  content_optimization_example.py  content_optimization_simple_example.py  core_infrastructure_demo.py  cuda_acceleration_example.py  database_config_example.py  database_consolidation_migration_example.py  database_showcase.py  dry_formatter_demo.py  enhanced_config_manager_demo.py  enhanced_huggingface_demo.py  enhanced_unified_client_demo.py  error_handling_example.py  error_response_ai_integration_demo.py  error_response_ai_integration_simple_demo.py  error_response_service_demo.py  error_response_simple_demo.py  langgraph_orchestration_demo.py  llm_integration_example.py  multitenant_demo.py  optimized_auth_demo.py  performance_monitoring_example.py  progressive_streaming_example.py  prompt_builder_demo.py  query_analysis_example.py  response_core_orchestrator_demo.py  scheduler_manager_demo.py  smart_cache_manager_example.py  training_data_manager_demo.py  training_interface_demo.py  transformer_model_configuration_demo.py
extensions/: README.md
fastapi/: __init__.py  testclient.py
fastapi_stub/: __init__.py  testclient.py
guardrails/: validator.py
headers/: LICENSE_HEADER.txt
integrations/: automation_manager.py  local_rpa_client.py  (+1 more)
ui_launchers2/desktop_ui/src-tauri/: Cargo.toml
(+10186 files in other folders)
