[tool.ruff]
line-length = 100

[project]
name = "ai-karen"
version = "0.1.0"
description = "Kari AI modular engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kari AI Team" }]
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "ai_karen_engine",
    "ai_karen_engine.*",
    "ui_logic",
    "ui_logic.*",
]

[tool.ruff.lint]
extend-select = ["TID252", "TID251"]

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["TID252"]
"ui/**/*.py" = ["TID251"]
"tests/**/*.py" = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"ui" = { msg = "src/ui must not import from the /ui package" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
