[tool.poetry]
name = "ai-karen"
version = "0.1.0"
description = "Modular, local-first AI orchestrator with memory layers, plugin framework, and multi-database support (Postgres, Milvus, Redis, DuckDB) for autonomous LLM agents."
authors = ["Zeus-Eternal <zeus.the.eternal@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

# src/ layout
packages = [
  { include = "ai_karen_engine", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"

pyautogui = ">=0.9.54,<0.10.0"
urwid = ">=3.0.2,<4.0.0"
prompt-toolkit = ">=3.0.52,<4.0.0"

pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"

# Test/runtime utils
pytest = ">=8.4.2,<9.0.0"

wheel = ">=0.45.1,<0.46.0"

transformers = ">=4.56.1,<5.0.0"
huggingface-hub = ">=0.34.4,<0.35.0"
google-generativeai = ">=0.8.5,<0.9.0"
openai = ">=1.107.1,<2.0.0"

requests = ">=2.32.5,<3.0.0"
scikit-learn = "==1.5.2"
datasets = ">=4.0.0,<5.0.0"

jinja2 = ">=3.1.6,<4.0.0"
passlib = ">=1.7.4,<2.0.0"
email-validator = ">=2.3.0,<3.0.0"
itsdangerous = ">=2.2.0,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"

prometheus-client = ">=0.22.1,<0.23.0"
cryptography = ">=45.0.7,<46.0.0"
gputil = ">=1.4.0,<2.0.0"
psutil = ">=7.0.0,<8.0.0"

# Matplotlib 3.10 may not be universally available yet; relax slightly
matplotlib = ">=3.8,<4.0"

neo4j = ">=5.28.2,<6.0.0"
pyjwt = ">=2.10.1,<3.0.0"
markdown = ">=3.9,<4.0"

# Use the correct PyPI names
pytesseract = ">=0.3.13,<0.4.0"
pymupdf = ">=1.24.9,<1.25.0"          # (import name: fitz)
beautifulsoup4 = ">=4.12,<5.0"        # (instead of 'bs4')

plotly = ">=6.3.0,<7.0.0"
seaborn = ">=0.13.2,<0.14.0"

# Redis Python client is 5.x (no 6.x yet)
redis = ">=5.0,<6.0"
fakeredis = ">=2.31.1,<3.0.0"

psycopg = ">=3.2.10,<4.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
aiohttp = ">=3.12.15,<4.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
alembic = ">=1.16.5,<2.0.0"

chardet = ">=5.2.0,<6.0.0"
httpx = ">=0.28.1,<0.29.0"
pyotp = ">=2.9.0,<3.0.0"
tenacity = ">=9.1.2,<10.0.0"
pytest-asyncio = ">=1.1.0,<2.0.0"
pytest-timeout = ">=2.3.1,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"
argon2-cffi = ">=25.1.0,<26.0.0"
sse-starlette = ">=3.0.2,<4.0.0"
pre-commit = ">=4.3.0,<5.0.0"
httptools = ">=0.6.4,<0.7.0"
uvloop = ">=0.21.0,<0.22.0"
python-json-logger = ">=3.3.0,<4.0.0"

langgraph = ">=0.6.7,<0.7.0"
langchain-core = ">=0.3.76,<0.4.0"

duckdb = ">=1.3.2,<2.0.0"
watchdog = ">=6.0.0,<7.0.0"
jsonschema = ">=4.25.1,<5.0.0"

opentelemetry-sdk = ">=1.36.0,<2.0.0"
opentelemetry-api = ">=1.36.0,<2.0.0"

tiktoken = ">=0.11.0,<0.12.0"
colorlog = ">=6.9.0,<7.0.0"
retry = ">=0.9.2,<0.10.0"

# Use a realistic yt-dlp pin (date-based releases)
yt-dlp = ">=2024.3.10"                # avoid future-dated 2025 pin that may not exist

opencv-python = ">=4.8,<5.0"
scenedetect = ">=0.6.7,<0.7.0"
assemblyai = ">=0.43.1,<0.44.0"
python-pptx = ">=1.0.2,<2.0.0"
docx2markdown = ">=0.1.1,<0.2.0"
chunkr-ai = ">=0.3.7,<0.4.0"
xmltodict = ">=0.15.1,<0.16.0"
hnswlib = ">=0.8.0,<0.9.0"
llama-cpp-python = ">=0.3.16,<0.4.0"
pymilvus = ">=2.3.0,<3.0.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
# Adjust these to the real entrypoints if you want CLI commands
karen-server = "ai_karen_engine.core.gateway.app:main"
kari-ext = "src.extensions.cli.main:main"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
