[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# ✅ The correct Tauri core crate
tauri = { version = "2.5.0" }

# ✅ Plugins
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-http = "2.0.0"
tauri-plugin-shell = "2.0.0"
